[package]
name        = "darwinia-precompile-assets"
description = "Assets precompiles for EVM pallet."
authors     = { workspace = true }
edition     = { workspace = true }
version     = { workspace = true }


[dependencies]
# frontier
fp-evm     = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }
pallet-evm = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }

# moonbeam
precompile-utils = { default-features = false, git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v0.9.36" }

# paritytech
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-assets = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

sp-core       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
[dev-dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "3.3" }
scale-info = { version = "2.3", features = ["derive"] }
sha3       = { version = "0.8" }

# moonbeam
precompile-utils = { git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v0.9.36", features = ["testing"] }

# paritytech
pallet-balances  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-io            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
	# frontier
	"fp-evm/std",
	"pallet-evm/std",

	# moonbeam
	"precompile-utils/std",

	# paritytech
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"sp-std/std",
	"sp-core/std",
]
