[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "State storage precompiles for EVM pallet."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-precompile-bls12-381"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "6.0.0"

[dependencies]
# crates.io
milagro_bls = { default-features = false, git = "https://github.com/darwinia-network/milagro_bls" }

# frontier
fp-evm     = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }
pallet-evm = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }

# moonbeam
precompile-utils = { default-features = false, git = "https://github.com/darwinia-network/moonbeam", branch = "xcm-v3-test" }

# substrate
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

[dev-dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "3.2" }
scale-info = { version = "2.3", features = ["derive"] }

# moonbeam
precompile-utils = { git = "https://github.com/darwinia-network/moonbeam", branch = "xcm-v3-test", features = ["testing"] }

# substrate
frame-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-balances  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-core          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-io            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-runtime       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

[features]
default = ["std"]
std = [
	# frontier
	"fp-evm/std",
	"pallet-evm/std",

	# moonbeam
	"precompile-utils/std",

	# substrate
	"sp-std/std",
]
