[package]
name        = "darwinia-precompile-bls12-381"
description = "State storage precompiles for EVM pallet."
authors     = { workspace = true }
edition     = { workspace = true }
version     = { workspace = true }


[dependencies]
# crates.io
milagro_bls = { default-features = false, git = "https://github.com/darwinia-network/milagro_bls" }

# frontier
fp-evm     = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }
pallet-evm = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }

# moonbeam
precompile-utils = { default-features = false, git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v0.9.36" }

# substrate
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[dev-dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "3.3" }
scale-info = { version = "2.3", features = ["derive"] }

# moonbeam
precompile-utils = { git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v0.9.36", features = ["testing"] }

# substrate
frame-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-balances  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-io            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
	# frontier
	"fp-evm/std",
	"pallet-evm/std",

	# moonbeam
	"precompile-utils/std",

	# substrate
	"sp-std/std",
]
