[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "State storage precompile for EVM pallet."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-precompile-state-storage"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "6.0.0"

[dependencies]
# frontier
fp-evm     = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.37" }
pallet-evm = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.37" }

# moonbeam
precompile-utils = { default-features = false, git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v0.9.37" }

# substrate
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[dev-dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "3.3" }
scale-info = { version = "2.3", features = ["derive"] }

# moonbeam
precompile-utils = { git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v0.9.37", features = ["testing"] }

# substrate
frame-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-balances  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-core          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-io            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
std = [
	# frontier
	"fp-evm/std",
	"pallet-evm/std",

	# moonbeam
	"precompile-utils/std",

	# substrate
	"frame-support/std",
	"sp-std/std",
]
