[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "utils precompiles for EVM pallet."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-evm-precompile-utils"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "6.0.0"

[dependencies]
# crates.io
array-bytes           = { version = "4.1" }
impl-trait-for-tuples = { version = "0.2.2" }
num_enum              = { version = "0.5.3", default-features = false }
ethabi                = { version = "15.0", default-features = false }
ethereum              = { version = "0.12.0", optional = true, features = ["with-codec"] }
libsecp256k1          = { version = "0.5", optional = true, features = ["static-context", "hmac"] }
log                   = { version = "0.4" }
rlp                   = { version = "0.5", optional = true }
sha3                  = { version = "0.9", default-features = false }
# darwinia-network
darwinia-evm-precompile-utils-macro = { path = "macro" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-core       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime    = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
# frontier
fp-evm = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }
pallet-evm = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }

[features]
default = ["std"]

std = [
	# crates.io
	"ethabi/std",
	"num_enum/std",
	"sha3/std",
	# paritytech
	"frame-system/std",
	"frame-support/std",
	"sp-core/std",
	"sp-std/std",
	# frontier
	"fp-evm/std",
	"pallet-evm/std"
]

testing = [
	# crates.io
	"ethereum",
	"libsecp256k1",
	"rlp",
	# paritytech
	"sp-runtime",
]
