[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia deposit primitives."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "dp-deposit"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "6.0.0"
