[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "utils precompiles for EVM pallet."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-evm-precompile-utils-macro"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "6.0.0"

[lib]
proc-macro = true

[dependencies]
# crates.io
proc-macro2 = { version = "1.0" }
quote       = { version = "1.0" }
sha3        = { version = "0.9", default-features = false }
syn         = { version = "1.0", features = ["full", "fold", "extra-traits", "visit"] }
num_enum    = { version = "0.5.3", default-features = false }

[dev-dependencies]
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }

[features]
default = ["std"]

std = [
	# crates.io
	"num_enum/std",
	"sha3/std",
]
